# epl-pool

./: README.md  app.py  pyproject.toml  render.yaml
.github/: render-build-deploy.yaml
.github/workflows/: render-build-deploy.yaml
draft-results/: 2019-20.json  2020-21.json  2021-22.json  2022-23.json  2023-24.json  2024-25.json
epl_pool/: owner_teams_23_24.py
static/css/: main.css
templates/: index.html
tests/: test_app.py
